[BUG #8514] use overflow:auto for native scrolling

--- a/framework/source/resource/qx/mobile/scss/common/_scroller.scss
+++ b/framework/source/resource/qx/mobile/scss/common/_scroller.scss
@@ -28,8 +28,8 @@
 .scroll.native {
   @include touch-action(pan);
 
-  overflow-y:scroll;
-  overflow-x:scroll;
+  overflow-y:auto;
+  overflow-x:auto;
 
   -webkit-overflow-scrolling:touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
